--- a/package.json
+++ b/package.json
@@ -12,14 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.11",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.11",
     "@angular/compiler": "~11.2.11",
     "@angular/core": "~11.2.11",
     "@angular/forms": "~11.2.11",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
+    "@stomp/stompjs": "^6.1.0",
+    "@types/socket.io": "^3.0.2",
+    "bootstrap": "^5.0.1",
+    "net": "^1.0.2",
+    "ngx-toastr": "^14.0.0",
     "rxjs": "~6.6.0",
+    "sockjs-client": "^1.5.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -29,6 +38,8 @@
     "@angular/compiler-cli": "~11.2.11",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/sockjs-client": "^1.5.0",
+    "@types/stompjs": "^2.3.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
